# FSAE-UNICAMP

./: .gitignore  README.md
Balança/: requirements.txt
Balança/FASE 1 - Firmware/calibracao/: calibracao.ino
Balança/FASE 1 - Firmware/medicao_balancas_caire/: medicao_balancas_caire.ino
Balança/FASE 1 - Firmware/medicao_balancas_test/: medicao_balancas_test.ino
Balança/FASE 2 - IDLE/: Armazenamento.py
Balança/FASE 4 - Dashboard/: Denso.xlsx  dash_denso.py  records  wind_tunnel_data_20250613_164213.csv  wind_tunnel_data_20250613_164319.csv
Celula de Carga/FASE 1 - Firmware/HX711__2_celulas_2025_caire/: HX711__2_celulas_2025_caire.ino
Celula de Carga/FASE 1 - Firmware/medicao_metal_test/: medicao_metal_test.ino
Celula de Carga/FASE 2 - IDLE/: Armazenamento.py
Celula de Carga/FASE 3 - Armazenamento/: 12-06-2025_03-40-31.txt
Celula de Carga/FASE 4 - Dashboard/: Resultados - Aeromap.xlsx  dash_denso_metal.py
SoundGate/: requirements.txt
SoundGate/FASE_2-Coletor_Serial/: coletor.py
SoundGate/FASE_4-Tratamento_Dados/: processador.py
SoundGate/FASE_5-Visualização_Parametrização/: dashboard.py
Telemetria/: .gitignore
Telemetria/Protocolos/Protocolo_Wifi_Principal/: pyproject.toml
Telemetria/Protocolos/Protocolo_Wifi_Principal/Nivel_1-Pré-Tratamento _Rasp/: coletor_armazenamento.py  instruções.txt
Telemetria/Protocolos/Protocolo_Wifi_Principal/Nivel_3-Model/: model.py
Telemetria/Protocolos/Protocolo_Wifi_Principal/Nivel_4-Controller/: controller.py
Telemetria/Protocolos/Protocolo_Wifi_Principal/Nivel_5-View/: all_graphs.html  index.html
(+85 files in other folders)
