[project]
name = "protocolo-wifi-principal"
version = "0.1.0"
description = ""
authors = [
    {name = "FaraoBack",email = "cairebelok3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "supabase (>=2.17.0,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
